Add @linus/testy, tests, other deps

--- a/2022/js/package.json
+++ b/2022/js/package.json
@@ -2,6 +2,7 @@
   "name": "aoc-2022",
   "version": "1.0.0",
   "description": "The solutions for Advent of Code 2022 in JS",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "mocha",
@@ -11,16 +12,19 @@
   "keywords": [],
   "author": "Linus Thiel <linus@yesbabyyes.se>",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
-    "@supabase/doctest-js": "linus/doctest-js#781e308",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsdoc": "^37.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jsdoc": "^3.6.7",
-    "mocha": "^9.1.3",
-    "prettier": "^2.5.0"
+    "@linus/testy": "github:linus/testy",
+    "@types/node": "^18.11.11",
+    "chai": "^4.3.7",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsdoc": "^39.6.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jsdoc": "^4.0.0",
+    "jsdoc-api": "^8.0.0",
+    "mocha": "^10.1.0",
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3"
   },
   "prettier": {
     "singleQuote": true
