--- a/2022/js/package.json
+++ b/2022/js/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@linus/testy": "github:linus/testy",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.11",
     "chai": "^4.3.7",
     "eslint": "^8.29.0",
