Target esnext for fresh features

--- a/2022/js/tsconfig.json
+++ b/2022/js/tsconfig.json
@@ -2,7 +2,8 @@
   "include": ["**/*.js"],
   "exclude": ["docs", "node_modules"],
   "compilerOptions": {
-    "lib": ["esnext"],
+    "target": "ESNext",
+    "lib": ["ESNext"],
     "allowJs": true,
     "checkJs": true,
     "strict": true,
