--- a/2022/js/package.json
+++ b/2022/js/package.json
@@ -13,7 +13,7 @@
   "author": "Linus Thiel <linus@yesbabyyes.se>",
   "license": "ISC",
   "devDependencies": {
-    "@linus/testy": "github:linus/testy",
+    "@linus/testy": "^1.0.3",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.11",
     "chai": "^4.3.7",
