Correct module in tsconfig

--- a/2023/js/tsconfig.json
+++ b/2023/js/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["ESNext"],
+    "module": "ESNext",
     "allowJs": true,
     "checkJs": true,
     "strict": true,
