--- a/2024/js/tsconfig.json
+++ b/2024/js/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["ESNext"],
-    "module": "ESNext",
+    "module": "nodenext",
     "allowJs": true,
     "checkJs": true,
     "strict": true,
